# logseq-ferrari

./: README.md
logseq-rm/: CMakeLists.txt  deploy.sh
logseq-rm/package/: logseq-rm.service
logseq-rm/qml/: App.qml  Bullet.qml  InkCanvas.qml
logseq-rm/src/: CMakeLists.txt  main.cpp  ocrworker.cpp  ocrworker.h  penhub.cpp  penhub.h  session.cpp  session.h
logseq-rm/src/logseqcli/: main.clj
logseq-rm/toolchains/: ferrari.cmake
